--- a/utils/defs.tex
+++ b/utils/defs.tex
@@ -234,6 +234,7 @@ minus .2ex}{-1em}{\normalsize\sf}}
 
 \lstnewenvironment{Csynopsis}
 { 
+  \textbf{C:} 
   \lstset{language={C}, backgroundcolor=\color{gray}, lineskip=2pt,
   morekeywords={size_t, TYPE, TYPENAME, SIZE}, aboveskip=0pt, belowskip=0pt}}{}
 
