incorporating new api templates and example files into spec document

--- a/main_spec.tex
+++ b/main_spec.tex
@@ -51,9 +51,18 @@
 \subsection{\textbf{sync}}\label{subsec:sync}
 \input{content/sync}
 
+\subsection{\textbf{execute}}\label{subsec:execute}
+\input{content/execute}
 
+\subsection{\textbf{transform}}\label{subsec:transform}
+\input{content/transform}
 
-%\subsection{Memory Management Routines}
+\subsection{Memory Management Routines}
+\subsubsection{\textbf{createResultsBuffer}}\label{subsec:createresbuf}
+\input{content/createresbuf}
+
+\subsubsection{\textbf{createObservable}}\label{subsec:createobserv}
+\input{content/createobserv}
 
 
 \clearpage
