adding template for datatypes; some other minor modifications corresponding to spec changes

--- a/main_spec.tex
+++ b/main_spec.tex
@@ -25,8 +25,8 @@
 \section{Execution Model}\label{subsec:execution_model}
 \input{content/execution_model}
 
-\section{Data Structures and Datatypes}\label{subsec:data_structs}
-\input{content/data_structs}
+\section{Datatypes}\label{subsec:datatypes}
+\input{content/datatypes}
 
 %\section{Language Bindings and Conformance}\label{subsec:bindings}
 %\input{content/language_bindings_and_conformance}
