adding bold formatting to table column headers

--- a/content/datatypes.tex
+++ b/content/datatypes.tex
@@ -5,7 +5,7 @@ The \qcor specification has a set of datatypes that enable the expression of qua
 
 \begin{tabular}{|l|l|l|}
 \hline 
-Datatype & Value & Purpose \\
+\ColHead{Datatype} & \ColHead{Value} & \ColHead{Purpose} \\
 \hline 
 \hline 
 \DATATYPENAME{Observable} &   & \\
