adding project website to spec

--- a/content/coverpage.tex
+++ b/content/coverpage.tex
@@ -25,10 +25,12 @@ Version \insertDocVersion
 \vfill{}
 
 \section*{Developed by}
-\begin{itemize}
-\item Put team/project name here\\
+The Software Stack and Algorithms for Automating Quantum-Classical Computing Project \\
+\url{https://qcor.ornl.gov}
+%\begin{itemize}
+%\item Put team/project name here\\
 %  \url{} 
-\end{itemize}
+%\end{itemize}
 \pagebreak{}
 
 \section*{Sponsored by}
