--- a/content/datatypes.tex
+++ b/content/datatypes.tex
@@ -11,10 +11,12 @@ The \qcor specification has a set of datatypes that enable the expression of qua
 \DATATYPENAME{Observable} & Specifies the evaluation of a hermitian or non hermitian operator\\
 \hline 
 \DATATYPENAME{ResultsBuffer} & contains the measurement results from a single quantum execution\\
+Note: (TODO) Define accessor methods
 \hline 
 \DATATYPENAME{ObservableTransform} & stores the method for mapping an observable to another observable\\
 \hline 
 \DATATYPENAME{Kernel} & function pointer to a high level representation of the quantum program\\
+Note: (TODO) Move the Kernel to the appropriate spec location
 \hline 
 \end{tabular}
 
