--- a/content/taskInitiate.tex
+++ b/content/taskInitiate.tex
@@ -18,6 +18,8 @@ Handle qcore::taskInitiate(Observable *observable, Kernel *kernel, Objective *ob
     \apiargument{IN}{kernel}{The quantum kernel to be executed as part of the objective function evaluation}
     \apiargument{IN}{objective}{A parameterized user defined function transforming input data into an output result}
     \apiargument{IN}{optimizer}{Takes an objective function as input and outputs the optimal function parameters and associated function value}
+    \apiargument{IN}{parameters}{Vector of kernel parameters}
+    \apiargument{OUT}{handle}{}
 \end{apiarguments}
 
 \apidescription{
