--- a/content/datatypes.tex
+++ b/content/datatypes.tex
@@ -11,9 +11,9 @@ The \qcor specification has a set of datatypes that enable the expression of qua
 \DATATYPENAME{Observable} & Specifies the evaluation of a hermitian or non hermitian operator\\
 \hline 
 \DATATYPENAME{ResultsBuffer} & contains the measurement results from a single quantum execution\\
-Note: (TODO) Define accessor methods
-\hline 
-\DATATYPENAME{ObservableTransform} & stores the method for mapping an observable to another observable\\
+Note: (TODO) Treat this as a composite data type.  
+             Define the methods in the data structure.
+
 \hline 
 \DATATYPENAME{Kernel} & function pointer to a high level representation of the quantum program\\
 Note: (TODO) Move the Kernel to the appropriate spec location
@@ -22,7 +22,12 @@ Note: (TODO) Move the Kernel to the appropriate spec location
 
 \medskip{}
 
+%Enumerated Types
+\DATATYPENAME{ObservableType} & 
+NOTE: (TODO) enumerate different observable types
 
 %Composite datatype
 \DATATYPENAME{ObjectiveFunction} & Captures the behavior of a parameterizable function. It is initialized with the problem-specific observable and kernel, and exposes a method to evaluate the kernel given a set of parameters and executes general pre and post processing of the kernel execution\\
+\hline
+\DATATYPENAME{ObservableTransform} & stores the method for mapping an observable to another observable.  Members are input type, output type and observable elements of the observable.\\
 \hline
