--- a/content/datatypes.tex
+++ b/content/datatypes.tex
@@ -8,24 +8,32 @@ The \qcor specification has a set of datatypes that enable the expression of qua
 \ColHead{Datatype} & \ColHead{Description} \\
 \hline 
 \hline 
-\DATATYPENAME{Observable} & Specifies the evaluation of a hermitian or non hermitian operator\\
-\hline 
 \DATATYPENAME{Kernel} & function pointer to a high level representation of the quantum program\\
 Note: (TODO) Move the Kernel to the appropriate spec location
 \hline 
+\DATATYPENAME{CompositeOperator}
+\hline
 \end{tabular}
 
 \medskip{}
 
 %Enumerated Types
-\DATATYPENAME{ObservableType} & 
+\DATATYPENAME{OperatorType} & 
 NOTE: (TODO) enumerate different observable types
+Fermionic 
+Pauli
+FieldOperator
+Clause/CostFunction
+
 
 %Composite datatype
 \DATATYPENAME{ObjectiveFunction} & Captures the behavior of a parameterizable function. It is initialized with the problem-specific observable and kernel, and exposes a method to evaluate the kernel given a set of parameters and executes general pre and post processing of the kernel execution\\
 \hline
-\DATATYPENAME{ObservableTransform} & stores the data to create an observable or map an observable to another observable.  Members are input type, output type and observable elements of the observable.\\
+\DATATYPENAME{Observable} & stores the data to describe an observable that can be used to map an observable to another observable.  Members are an OperatorType, and a CompositeOperator.\\
+
 \hline
 \DATATYPENAME{ResultsBuffer} & contains the measurement results from a single quantum execution\\
 Note: (TODO) Define the methods in the data structure.
 \hline 
+\DATATYPENAME{BasicPauliOperator} & type with three attributes: PauliX, PauliY or PauliZ, site/spatial index which is an integer value, coefficient float value
+\DATATYPENAME{GenericOperator} & type with three attributes: PauliX, PauliY or PauliZ, site/spatial index which is an integer value, coefficient float value
