--- a/content/createCompOp.tex
+++ b/content/createCompOp.tex
@@ -1,1 +1,42 @@
+\apisummary{
+    
+}
 
+\begin{apidefinition}
+
+\begin{Csynopsis}
+
+\end{Csynopsis}
+
+\begin{Cppsynopsis}
+
+\end{Cppsynopsis}
+
+
+\begin{apiarguments}
+    \apiargument{}{}{}
+    
+\end{apiarguments}
+
+\apidescription{
+    
+}
+
+\apireturnvalues{
+    use shmem tex files as a guide
+}      
+
+\apinotes{
+    
+}
+
+\begin{apiexamples}
+
+\apicppexample
+    { This is a simple program that calls \FUNC{createCompOp}: } 
+    { example_code/createCompOp_ex.cpp} 
+    {}
+
+\end{apiexamples}
+
+\end{apidefinition}
