--- a/content/datatypes.tex
+++ b/content/datatypes.tex
@@ -28,7 +28,7 @@ FieldOperator
 %Composite datatype
 \DATATYPENAME{ObjectiveFunction} & Captures the behavior of a parameterizable function. It is initialized with the problem-specific observable and kernel, and exposes a method to evaluate the kernel given a set of parameters and executes general pre and post processing of the kernel execution\\
 \hline
-\DATATYPENAME{Observable} & is a Pauli obsevable, stores the data to describe an observable that can be used to map an observable to another observable.  Can be assigned from a CompositeOperator or the observableTransform routine.\\
+\DATATYPENAME{Observable} &  operator built from the basic operators, PauliOperator and FieldOperator. Contains the data to algebraically relate basic and complex operations, and the measurements from the observation of the kernel execution.\\
 
 \hline
 \DATATYPENAME{ResultsBuffer} & contains the measurement results from a single quantum execution\\
