--- a/content/datatypes.tex
+++ b/content/datatypes.tex
@@ -38,5 +38,7 @@ Note: (TODO) Define the methods in the data structure.
 \hline
 \DATATYPENAME{FieldOperator} & single operator type with four attributes: creation or anihilation, exchangeStatistics, site/spatial index which is an integer value, coefficient float value
 \hline
+\DATATYPENAME{AlgebraicOperation} & describes operations on Pauli and Field operands
+\hline
 
 
