adding __qpu__ to kernel description

--- a/content/execution_model.tex
+++ b/content/execution_model.tex
@@ -11,7 +11,7 @@ Currently, \qcor exposes initialization, synchronization, execution and memory m
 
 
 \subsection{\textbf{Quantum Kernels}}\label{subsec:kernel}
-\qcor extends \CorCpp by allowing the programmer to define functions, called \FUNC{kernels}, that, when called, is executed asynchronously on the quantum device. A \FUNC{kernel} is defined using the <insert decorator> declaration specifier. 
+\qcor extends \CorCpp by allowing the programmer to define functions, called \FUNC{kernels}, that, when called, is executed asynchronously on the quantum device. A \FUNC{kernel} is defined using the __qpu__ declaration specifier. 
 %TODO: provide additional details about kernel parameters
 
 The sample code below illustrates \FUNC{kernel} usage in a \CorCpp program.
