corrected version and modified c++ format def

--- a/utils/defs.tex
+++ b/utils/defs.tex
@@ -28,7 +28,7 @@
 
 \newcommand{\newtext}[1]{\textcolor{ForestGreen}{#1}}
 \newcommand{\oldtext}[1]{\textcolor{red}{\sout{#1}}}
-\newcommand{\insertDocVersion}{1.3}
+\newcommand{\insertDocVersion}{1.0}
 \newcommand{\qcor}{\emph{QCOR}\xspace}
 \newcommand{\FUNC}[1]{\textit{#1}}
 \newcommand{\VAR}[1]{\textit{#1}}
@@ -37,7 +37,7 @@
 \newcommand{\CorCpp}{\textit{C/C++}\xspace}
 \newcommand{\Python}{\textit{Python}}
 \newcommand{\Clang}{\textit{C}}
-\newcommand{\Cpp}{\textit{C++}}
+\newcommand{\Cpp}{\textit{C++}\xspace}
 \newcommand{\Celev}{\textit{C11}}
 \newcommand{\TYPE}{\emph{TYPE}}
 \newcommand{\TYPENAME}{\emph{TYPE}}
