adding subsections for new algebraic and pauli creation apis

--- a/main_spec.tex
+++ b/main_spec.tex
@@ -57,12 +57,36 @@
 \subsection{\textbf{transform}}\label{subsec:transform}
 \input{content/transform}
 
+
 \subsection{Memory Management Routines}
 \subsubsection{\textbf{createResultsBuffer}}\label{subsec:createresbuf}
 \input{content/createresbuf}
 
 \subsubsection{\textbf{createObservable}}\label{subsec:createobserv}
 \input{content/createobserv}
+
+\subsubsection{\textbf{createPauli}}\label{subsec:createpauli}
+\input{content/createPauli}
+
+\subsubsection{\textbf{pauliX}}\label{subsec:paulix}
+\input{content/pauliX}
+
+\subsubsection{\textbf{pauliY}}\label{subsec:pauliy}
+\input{content/pauliY}
+
+\subsubsection{\textbf{pauliZ}}\label{subsec:pauliz}
+\input{content/pauliZ}
+
+
+\subsection{Algebraic Routines}
+\subsubsection{\textbf{addOperation}}\label{subsec:addop}
+\input{content/addOperation}
+
+\subsubsection{\textbf{multiplyOperation}}\label{subsec:mulop}
+\input{content/multiplyOperation}
+
+\subsubsection{\textbf{mergeOperation}}\label{subsec:mergeop}
+\input{content/mergeOperation}
 
 
 \clearpage
