arguments and rough description of api return

--- a/content/multiplyOperation.tex
+++ b/content/multiplyOperation.tex
@@ -14,7 +14,8 @@
 
 
 \begin{apiarguments}
-    \apiargument{}{}{}
+    \apiargument{IN}{operand1}{oberservable operand}
+    \apiargument{IN}{operand2}{oberservable operand}
 \end{apiarguments}
 
 \apidescription{
@@ -22,7 +23,7 @@
 }
 
 \apireturnvalues{
-    
+     Returns an obersvable the is the addition of operand1 and operand2.
 }      
 
 \apinotes{
