notes for pauliX routine

--- a/content/pauliX.tex
+++ b/content/pauliX.tex
@@ -14,15 +14,15 @@
 
 
 \begin{apiarguments}
-    \apiargument{}{}{}
+    \apiargument{IN}{n}{integer value}
 \end{apiarguments}
 
 \apidescription{
-        
+       -integer input that creates an pauliX operator at site n
 }
 
 \apireturnvalues{
-    
+    returns PauliOperator for pauliX
 }      
 
 \apinotes{
