Adding description and header

--- a/content/pauliX.tex
+++ b/content/pauliX.tex
@@ -1,15 +1,15 @@
 \apisummary{
-    
+    Creates a pauliX operator at site n.   
 }
 
 \begin{apidefinition}
 
 \begin{Csynopsis}
-    
+    PauliOperator pauliX(int n)
 \end{Csynopsis}
 
 \begin{Cppsynopsis}
-    
+    PauliOperator qcor::pauliX(int n)
 \end{Cppsynopsis}
 
 
@@ -18,7 +18,7 @@
 \end{apiarguments}
 
 \apidescription{
-       -integer input that creates an pauliX operator at site n
+       \FUNC{pauliX} accepts an integer input that creates a Pauli X operator at site n.  The Pauli X operator is returned as a \DATATYPENAME{PauliOperator}.
 }
 
 \apireturnvalues{
