Updating return description

--- a/content/pauliX.tex
+++ b/content/pauliX.tex
@@ -22,7 +22,7 @@
 }
 
 \apireturnvalues{
-    returns PauliOperator for pauliX
+    Returns a single \DATATYPENAME{PauliOperator}.
 }      
 
 \apinotes{
