Adding description details

--- a/content/pauliY.tex
+++ b/content/pauliY.tex
@@ -1,28 +1,28 @@
 \apisummary{
-    
+    Creates Pauli Y operator at site n.
 }
 
 \begin{apidefinition}
 
 \begin{Csynopsis}
-    
+    PauliOperator pauliY(int n)
 \end{Csynopsis}
 
 \begin{Cppsynopsis}
-    
+    PauliOperator qcor::pauliX(int n)
 \end{Cppsynopsis}
 
 
 \begin{apiarguments}
-    \apiargument{}{}{}
+    \apiargument{IN}{n}{integer value}
 \end{apiarguments}
 
 \apidescription{
-        
+         \FUNC{pauliY} accepts an integer input that creates a Pauli Y operator at site n.  The Pauli Y operator is returned as a \DATATYPENAME{PauliOperator} type.
 }
 
 \apireturnvalues{
-    
+    Returns a single \DATATYPENAME{PauliOperator}.
 }      
 
 \apinotes{
