minor text update

--- a/content/pauliY.tex
+++ b/content/pauliY.tex
@@ -9,7 +9,7 @@
 \end{Csynopsis}
 
 \begin{Cppsynopsis}
-    PauliOperator qcor::pauliX(int n)
+    PauliOperator qcor::pauliY(int n)
 \end{Cppsynopsis}
 
 
