Update variable 'n' format

--- a/content/pauliY.tex
+++ b/content/pauliY.tex
@@ -18,7 +18,7 @@
 \end{apiarguments}
 
 \apidescription{
-         \FUNC{pauliY} accepts an integer input that creates a Pauli Y operator at site n.  The Pauli Y operator is returned as a \DATATYPENAME{PauliOperator} type.
+         \FUNC{pauliY} accepts an integer input that creates a Pauli Y operator at site \VAR{n}.  The Pauli Y operator is returned as a \DATATYPENAME{PauliOperator} type.
 }
 
 \apireturnvalues{
