Update variable 'n' format

--- a/content/pauliX.tex
+++ b/content/pauliX.tex
@@ -18,7 +18,7 @@
 \end{apiarguments}
 
 \apidescription{
-       \FUNC{pauliX} accepts an integer input that creates a Pauli X operator at site n.  The Pauli X operator is returned as a \DATATYPENAME{PauliOperator}.
+       \FUNC{pauliX} accepts an integer input that creates a Pauli X operator at site \VAR{n}.  The Pauli X operator is returned as a \DATATYPENAME{PauliOperator}.
 }
 
 \apireturnvalues{
