--- a/content/pauliZ.tex
+++ b/content/pauliZ.tex
@@ -18,7 +18,7 @@
 \end{apiarguments}
 
 \apidescription{
-        \FUNC{pauliZ} accepts an integer input that creates a Pauli Z operator at site n.  The Pauli Z operator is returned as a \DATATYPENAME{PauliOperator} type.
+        \FUNC{pauliZ} accepts an integer input that creates a Pauli Z operator at site \VAR{n}.  The Pauli Z operator is returned as a \DATATYPENAME{PauliOperator} type.
 }
 
 \apireturnvalues{
