minor change to field operator description

--- a/content/datatypes.tex
+++ b/content/datatypes.tex
@@ -13,6 +13,6 @@ The \qcor specification has a set of datatypes that enable the expression of qua
 \DATATYPENAME{PauliOperator} is a single operator type with three attributes: PauliX, PauliY or PauliZ, site/spatial index which is an integer value, coefficient float value.\\
 
 \subsection{\textbf{FieldOperator}}\label{subsec:FieldOperator}
-\DATATYPENAME{FieldOperator} is a single operator type with four attributes: creation or anihilation, exchangeStatistics, site/spatial index which is an integer value, coefficient float value.\\
+\DATATYPENAME{FieldOperator} is a single operator type with four attributes: creator or anihilator, exchangeStatistics, site/spatial index which is an integer value, coefficient float value.\\
 
 
