minor update to description

--- a/content/createPauli.tex
+++ b/content/createPauli.tex
@@ -14,7 +14,7 @@
 
 
 \begin{apiarguments}
-    \apiargument{IN}{sitemap}{mapping of integer 'key' to a string of value "x", "y" or "z"}
+    \apiargument{IN}{sitemap}{mapping of an integer to a string of value "x", "y" or "z"}
     \apiargument{IN}{paulistr}{string}
     \apiargument{IN}{coef}{coefficient}
 \end{apiarguments}
