added sitemap datatype

--- a/content/datatypes.tex
+++ b/content/datatypes.tex
@@ -15,4 +15,6 @@ The \qcor specification has a set of datatypes that enable the expression of qua
 \subsection{\textbf{FieldOperator}}\label{subsec:FieldOperator}
 \DATATYPENAME{FieldOperator} is a single operator type with four attributes: creator or anihilator, exchangeStatistics, site/spatial index which is an integer value, coefficient float value.\\
 
+\subsection{\textbf{SiteMap}}\label{subsec:Sitemap}
+\DATATYPENAME{SiteMap} has an integer, \VAR{site_idx}, and string, \VAR{plane}, attribute. These attributes form a mapping of \VAR{site_idx} to \VAR{plane} for use in \Clang.
 
