--- a/content/createPauli.tex
+++ b/content/createPauli.tex
@@ -1,15 +1,15 @@
 \apisummary{
-    Creates a Pauli operator.
+    Creates a Pauli observable.
 }
 
 \begin{apidefinition}
 
 \begin{Csynopsis}
-    PauliOperator createPauli(SiteMap sitemap, int coef, char* paulistr)
+    Observable createPauli(SiteMap sitemap, int coef, char* paulistr)
 \end{Csynopsis}
 
 \begin{Cppsynopsis}
-    PauliOperator qcor::createPauli(std::map<int,string> sitemap, int coef, string paulistr)
+    Observable qcor::createPauli(std::map<int,string> sitemap, int coef, string paulistr)
 \end{Cppsynopsis}
 
 
@@ -20,11 +20,11 @@
 \end{apiarguments}
 
 \apidescription{
-        \FUNC{createPauli} accepts a string representation of a complex Pauli operator, \VAR{paulistr}, or an integer:string mapping, \VAR{sitemap}, of an integer site number to a string ``x'', ``y'', or ``z''. The integer \VAR{coef} argument can optionally be included with \VAR{sitemap} to multiply each term in the site map. If \VAR{coef} is not included, the default value is 1. If \VAR{paulistr} is provided, the expected form of the string is ``<coefficient> <pauli string> <integer> ... <optional operation>''. If both \VAR{paulistr} and \VAR{sitemap} are provided, \VAR{paulistr} is ignored and \VAR{sitemap} is used to produce the Pauli operator. If neither \VAR{paulistr} or \VAR{sitemap} are provided, the identy map is used to create the Pauli operator.
+        \FUNC{createPauli} accepts a string representation of a complex Pauli operator, \VAR{paulistr}, or an integer:string mapping, \VAR{sitemap}, of an integer site number to a string ``x'', ``y'', or ``z''. The integer \VAR{coef} argument can optionally be included with \VAR{sitemap} to multiply each term in the site map. If \VAR{coef} is not included, the default value is 1. If \VAR{paulistr} is provided, the expected form of the string is ``<coefficient> <pauli string> <integer> ... <optional operation>''. If both \VAR{paulistr} and \VAR{sitemap} are provided, \VAR{paulistr} is ignored and \VAR{sitemap} is used to produce the Pauli obervable. If neither \VAR{paulistr} or \VAR{sitemap} are provided, the identy map is used to create the Pauli observable.
 }
 
 \apireturnvalues{
-    Returns a single instance of a \DATATYPENAME{PauliOperator}.
+    Returns a single instance of a \DATATYPENAME{Observable}.
 }      
 
 \apinotes{
