--- a/content/pauliX.tex
+++ b/content/pauliX.tex
@@ -5,11 +5,11 @@
 \begin{apidefinition}
 
 \begin{Csynopsis}
-    PauliOperator pauliX(int n)
+    Observable pauliX(int n)
 \end{Csynopsis}
 
 \begin{Cppsynopsis}
-    PauliOperator qcor::pauliX(int n)
+    Observable qcor::pauliX(int n)
 \end{Cppsynopsis}
 
 
@@ -18,11 +18,11 @@
 \end{apiarguments}
 
 \apidescription{
-       \FUNC{pauliX} accepts an integer input that creates a Pauli X operator at site \VAR{n}.  The Pauli X operator is returned as a \DATATYPENAME{PauliOperator}.
+       \FUNC{pauliX} accepts an integer input that creates a Pauli X operator at site \VAR{n}.  The Pauli X operator is returned as a \DATATYPENAME{Observable}.
 }
 
 \apireturnvalues{
-    Returns a single \DATATYPENAME{PauliOperator}.
+    Returns a single instance of \DATATYPENAME{Observable}.
 }      
 
 \apinotes{
